@@ -3,19 +3,22 @@
 
   <groupId>net.obmc</groupId>
   <artifactId>OBAmazeingTimer</artifactId>
-  <version>1.0</version>
-  <packaging>jar</packaging>
   <name>OBAmazeingTimer</name>
-  <description>Timer for the build server maze called A-Maze-Ing</description>
+  <version>1.4</version>
+  <description>Timer for solving A-Maze-Ing maze on the build server and recording attempt times on signs</description>
+  <url>http://ob-mc.net</url>
+  <packaging>jar</packaging>
 
   <properties>
+    <api-version>1.21</api-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <build>
 
-    <finalName>OBAmazeingTimer</finalName>
+    <finalName>${project.name}-${project.version}</finalName>
 
+    <!-- ensure .yml files gets the project properties populated -->
     <resources>
       <resource>
         <targetPath>.</targetPath>
@@ -35,6 +38,10 @@
         <configuration>
           <source>21</source>
           <target>21</target>
+          <compilerArgs>
+            <arg>-Xlint:-options</arg>
+            <arg>-proc:full</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
@@ -59,7 +66,7 @@
     <dependency>
       <groupId>io.papermc.paper</groupId>
       <artifactId>paper-api</artifactId>
-      <version>1.21.3-R0.1-SNAPSHOT</version>
+      <version>1.21.5-R0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
     	<groupId>org.jetbrains</groupId>
